[package]
name = "ykoath-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ykoath = { version = "0.1.0", git = "https://github.com/icewind1991/ykoath-rs", branch = "api" }
anyhow = "1"
chrono = "0.4"
fuzzy_finder = "0.3.0"
cli-clipboard = { version = "0.3.0", optional = true }

[features]
default = ["clipboard"]
clipboard = ["cli-clipboard"]